# Android_with_OpenCV_Module

./: README.md  settings.gradle
MyOpenCv/: build.gradle
MyOpenCv/src/androidTest/java/com/jason9075/myopencv/: ExampleInstrumentedTest.java
MyOpenCv/src/main/: AndroidManifest.xml
MyOpenCv/src/main/cpp/: CMakeLists.txt  myopencv.cpp
MyOpenCv/src/main/java/com/jason9075/myopencv/: ImageInfo.java  NativeLib.java
MyOpenCv/src/test/java/com/jason9075/myopencv/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/com/jason9075/myapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jason9075/myapp/: FirstFragment.java  MainActivity.java  SecondFragment.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/test/java/com/jason9075/myapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
